# CH_Fishinator

./: .gitmodules  README.md  TODO.md
docs/: FishingTest_Controls_180209.txt  Fishing_Controls_StatMachine_180322.txt
firmware/: .gitignore
firmware/esp_src/: .gitignore  CMakeLists.txt  Makefile  ReadMe_Components.md  ReadMe_Firmware.md  Resouces.md  sdkconfig  sdkconfig.old
firmware/esp_src/components/: arduino-esp32
firmware/esp_src/main/: CHMotorDriver.cpp  CHMotorDriver.h  VPID.cpp  VPID.h  component.mk  fish_CnC.cpp  fish_CnC.h  fish_prompts.h  myMain_or_ino.cpp  myMain_or_ino.cpp.bak  mymain.cpp  sdkconfig_arduino.h.bak
firmware/esp_src/scripts_clion/: esp_arduino_includes.cmake  esp_buildflags.cmake  esp_idf_includes.cmake  esp_make_scripts.cmake  esp_snippets_includes.cmake
firmware/lib_common/: HID_Joystick
firmware/lufa_src/: .gitignore  CMakeLists.txt  ReadMe.md  ZZ_NULL.cpp
firmware/lufa_src/scripts/: avr_sdk_includes.cmake  avr_toolchain.cmake  lib_blynk_includes.cmake  lufa_sdk_includes.cmake
firmware/lufa_src/src/: CMakeLists.txt  CMakeLists.txt.sub
firmware/lufa_src/src/USBtoSerial/: Descriptors.h  USBtoSerial.c  makefile
firmware/samd_pio_src/: .gitignore  CMakeLists.txt  ReadMe_Firmware_SAMD.md  platformio.ini
firmware/samd_pio_src/src/: myMain.cpp  pgmstrings.h
hardware/EncoderBoard/: .~lock.BOM_EncoderBoard.ods#  BOM_EncoderBoard.ods  EncAMT203_Cat6_180223.b#1  EncAMT203_Cat6_180223.b#2  EncAMT203_Cat6_180223.brd  EncAMT203_Cat6_180223.s#1  EncAMT203_Cat6_180223.sch  eagle.epf
hardware/LogicBoard/: BOM_LogicBoard.ods  LogicBoard_ESP_SAMD.b##  LogicBoard_ESP_SAMD.bcream.ger  LogicBoard_ESP_SAMD.bcream.gpi  LogicBoard_ESP_SAMD.boardoutline.ger  LogicBoard_ESP_SAMD.boardoutline.gpi  LogicBoard_ESP_SAMD.bottomlayer.ger  LogicBoard_ESP_SAMD.bottomlayer.gpi  LogicBoard_ESP_SAMD.bottomsilkscreen.ger  LogicBoard_ESP_SAMD.bottomsilkscreen.gpi  LogicBoard_ESP_SAMD.bottomsoldermask.ger  LogicBoard_ESP_SAMD.bottomsoldermask.gpi  LogicBoard_ESP_SAMD.brd  LogicBoard_ESP_SAMD.drills.dri  LogicBoard_ESP_SAMD.drills.xln  LogicBoard_ESP_SAMD.sch  LogicBoard_ESP_SAMD.tcream.ger  LogicBoard_ESP_SAMD.tcream.gpi  LogicBoard_ESP_SAMD.toplayer.ger  LogicBoard_ESP_SAMD.toplayer.gpi  LogicBoard_ESP_SAMD.topsilkscreen.ger  LogicBoard_ESP_SAMD.topsilkscreen.gpi  LogicBoard_ESP_SAMD.topsoldermask.ger  LogicBoard_ESP_SAMD.topsoldermask.gpi  Logic_board_partslist.csv  Logic_board_partslist.ods  eagle.epf
